@@ -1,3 +1,8 @@
+2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03125] w3m -m < image
+	* file.c (openGeneralPagerBuffer): use internal viewer for -m option
+
 2002-03-13  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03116] Re: aligned block in <td align="center">
